# image-sequence-to-video

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: release.yml
docs/: DEVELOPMENT_SETUP.md  TESTING_GUIDE.md
image_sequence_to_video/: __init__.py
tests/: __init__.py  conftest.py  test_ffmpeg_args.py  test_natural_sort.py  test_sequence_detection.py  test_utility_functions.py  test_versioning.py
tests/fixtures/: .gitkeep
